@@ -36,6 +36,9 @@ API Changes
     written a custom RegexCapabilities it will need to be updated
     to the new API.  (Robert Muir, Uwe Schindler)
 
+  * LUCENE-2638 MakeHighFreqTerms.TermStats public to make it more useful
+    for API use. (Andrzej Bialecki)
+
 ======================= Lucene 3.x (not yet released) =======================
 
 Changes in backwards compatibility policy
